[package]
name = "summon-keepass"
version = "0.3.0"
authors = ["Marcin Skarbek <git@skarbek.name>", "Christoph Jähnigen <desolat@nuabaranda.net>"]

[dependencies]
keepass = "0.4.9"
rust-ini = "0.9.4"
newline-converter = "0.2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
