[package]
name = "summon-keepass"
version = "0.3.0-rc.2"
edition = "2021"
authors = ["Marcin Skarbek <git@skarbek.name>", "Christoph Jähnigen <desolat@nuabaranda.net>"]

[dependencies]
keepass = "0.4.9"
rust-ini = "0.9.4"
newline-converter = "0.2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[package.metadata.release]
# Sign tags and commits
sign-commit = false
sign-tag = false
# Don't push automatically - let developer review first
push = false
# Update version in Cargo.lock
pre-release-commit-message = "chore: release {{version}}"
# Tag format (default tag-name is "{{prefix}}v{{version}}", so prefix should be empty)
tag-prefix = ""
tag-message = "Release {{version}}"
# Don't publish to crates.io (this is a binary-only project)
publish = false
# Pre-release replacements in files
pre-release-replacements = [
  # Update CHANGELOG.md - replace Unreleased header with version and date
  # NOTE: prerelease=false means this only runs for final releases, not alpha/beta/rc
  {file="CHANGELOG.md", search="## \\[Unreleased\\]", replace="## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly=1, prerelease=false},
  # Update comparison links in CHANGELOG.md
  {file="CHANGELOG.md", search="\\[Unreleased\\]: https://github.com/desolat/summon-keepass/compare/v([0-9.]+(-[a-z0-9.]+)?)...HEAD", replace="[Unreleased]: https://github.com/desolat/summon-keepass/compare/v{{version}}...HEAD\n[{{version}}]: https://github.com/desolat/summon-keepass/compare/v$1...v{{version}}", exactly=1, prerelease=false},
]
